# SKR_PICO

./: CMakeLists.txt  README.md  main.cpp  main.h
modules/: Stepper.cpp  SynchronousMovement.cpp  UartInterface.cpp
structs/: Peripherals.cpp  StepMove.cpp  tcmReadResponse.cpp  tmcRegisters.cpp
